fix: update to dark mode

--- a/src/stylesheets/_app.scss
+++ b/src/stylesheets/_app.scss
@@ -30,6 +30,10 @@ h2 strong {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
 
+  @include from(1800px) {
+    justify-content: center;
+  }
+
   @include mobile {
     align-items: start !important;
   }
