--- a/src/stylesheets/_override.scss
+++ b/src/stylesheets/_override.scss
@@ -56,6 +56,10 @@ svg {
   .container {
     padding: $column-gap;
   }
+
+  @include prefers-scheme(dark) {
+    background: rgba(0, 0, 0, 0.5);
+  }
 }
 
 .content {
