--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -16,4 +16,4 @@ $link: $primary;
 $link-hover: darken(hsl(0, 0%, 29%), 30%);
 
 $navbar-item-hover-background-color: none;
-$navbar-background-color: transparent;
+$navbar-background-color: transparent !important;
